--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import { ThemeScript } from 'astro-theme-toggle/components';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 ---
@@ -12,10 +13,11 @@ import '../styles/global.css';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Mehedi Hasan - Portfolio</title>
 		<ThemeScript />
 	</head>
 	<body class="bg-white dark:bg-black text-black dark:text-white">
+		<Header />
 		<slot />
 		<Footer />
 	</body>
